Bug 120715 - Cursor doesn't move forward on typing space at the end of .docx file when text is centered
Summary: Cursor doesn't move forward on typing space at the end of .docx file when tex...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.4.0.0.alpha0+
Hardware: All All
: low minor
Assignee: Attila Szűcs
URL:
Whiteboard: target:7.5.0 target:24.2.0
Keywords: bibisected, bisected
: 117170 (view as bug list)
Depends on:
Blocks: DOCX-Paragraph
  Show dependency treegraph
 
Reported: 2018-10-19 19:03 UTC by justus.croskery
Modified: 2023-08-09 20:09 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
This file produces the bug for me. Add some spaces to the end of the document and the input cursor will not advance. (4.18 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2018-11-20 14:34 UTC, justus.croskery
Details

Note You need to log in before you can comment on or make changes to this bug.
Description justus.croskery 2018-10-19 19:03:01 UTC
Description:
When I center my text in a .docx file that I have saved and reopened, the cursor does not move forward when I enter a space, as it does in a .odf file.

Steps to Reproduce:
1.Create a new file, and save it as a .docx file (Microsoft Word file).
2.Close the file.
3.Open the file again.
4.Center the cursor(ctrl-e).
5.Try writing some sample text. You will observe that the cursor does not move when you input a space, as it does usually.

Actual Results:
The cursor did not move when I entered a space

Expected Results:
The cursor should have moved forward one space


Reproducible: Always


User Profile Reset: Yes



Additional Info:
Version: 6.1.2.1
Build ID: 6.1.2-1
CPU threads: 4; OS: Linux 4.18; UI render: default; VCL: gtk3; 
Locale: en-US (C); Calc: group threaded

OS: Arch Linux with Gnome Wayland
I tested this with both OpenGL enabled and OpenGL disabled, with the same result.
Comment 1 Dieter 2018-10-21 19:00:29 UTC Comment hidden (obsolete)
Comment 2 justus.croskery 2018-10-22 14:24:12 UTC Comment hidden (obsolete)
Comment 3 Dieter 2018-10-22 15:14:23 UTC Comment hidden (obsolete)
Comment 4 justus.croskery 2018-10-22 15:15:12 UTC Comment hidden (obsolete)
Comment 5 justus.croskery 2018-10-22 16:11:51 UTC Comment hidden (obsolete)
Comment 6 Durgapriyanka 2018-11-19 16:11:00 UTC
I can not reproduce the bug.

Version: 6.0.6.2
Build ID: 0c292870b25a325b5ed35f6b45599d2ea4458e77
CPU threads: 2; OS: Windows 6.1; UI render: default; 
Locale: en-US (en_US); Calc: group
Comment 7 Xisco Faulí 2018-11-19 16:54:41 UTC Comment hidden (obsolete)
Comment 8 justus.croskery 2018-11-20 14:34:34 UTC
Created attachment 146840 [details]
This file produces the bug for me. Add some spaces to the end of the document and the input cursor will not advance.
Comment 9 Dieter 2018-11-20 15:29:45 UTC
I still can't reproduce it

Version: 6.2.0.0.beta1 (x64)
Build ID: d1b41307be3f8c19fe6f1938cf056e7ff1eb1d18
CPU threads: 4; OS: Windows 10.0; UI render: default; VCL: win; 
Locale: en-US (de_DE); UI-Language: en-GB
Calc: threaded
Comment 10 Timur 2018-11-22 16:57:51 UTC
Repro 5.4 and 6.3+. I update the title. No repro 5.2, looks like regression.
Comment 11 Aron Budea 2018-11-29 08:36:22 UTC
This is a regression from one of the commits in bug 104668. I haven't checked exactly, but it doesn't occur before the first, and occurs after the last. Adding Cc: to Vitaliy Anderson.
Comment 12 QA Administrators 2019-11-30 03:38:21 UTC Comment hidden (obsolete)
Comment 13 justus.croskery 2019-11-30 14:51:36 UTC
I am still able to reproduce this bug. Here is my Help-About Libreoffice:

Version: 6.3.2.2
Build ID: 6.3.2-2
CPU threads: 4; OS: Linux 5.3; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded
Comment 14 NISZ LibreOffice Team 2020-11-27 11:36:17 UTC
*** Bug 117170 has been marked as a duplicate of this bug. ***
Comment 15 Stéphane Guillou (stragu) 2021-01-13 05:08:32 UTC
Reproduced with example document in:

Version: 7.0.4.2
Build ID: 00(Build:2)
CPU threads: 8; OS: Linux 4.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Ubuntu package version: 1:7.0.4_rc2-0ubuntu0.18.04.2
Calc: threaded
Comment 16 Justin L 2021-01-21 14:39:33 UTC
Considering that this needs to be done to adhere to the formatting required by MS Formats (comment 11), I would expect that this is not a bug.

So I tested Word 2010, and it does advance the cursor - even past the end of the page - but it doesn't "center" until a non-space character is entered.

I'm removing "regression" because it is an implementation choice. If someone wants to waste time making it act "wrong like Microsoft does", then go for it.
Comment 17 Commit Notification 2022-06-24 12:15:57 UTC
Attila Szűcs committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7ef9c3ef30023cc40068e1f735aa4bec4811288b

tdf#43100 tdf#104683 tdf#120715 sw: cursor on spaces over margin

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 18 NISZ LibreOffice Team 2022-06-28 09:12:59 UTC
Verified in:
Version: 7.5.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 415dc3bb1c03dbdbc3cbca274bc435ac7557ba2d
CPU threads: 8; OS: Windows 10.0 Build 19042; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL
Comment 19 Commit Notification 2022-06-29 08:51:48 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/761d3a128214b48645f00e2ff094e0f8928d1ee1

Revert "tdf#43100 tdf#104683 tdf#120715 sw: cursor on spaces over margin"

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 20 Commit Notification 2022-07-04 13:35:45 UTC
Attila Szűcs committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/690d4eb71509649ad147cfe60f5b97e2cfaaa519

tdf#43100 tdf#104683 tdf#120715 sw: cursor on spaces over margin

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 21 Commit Notification 2023-08-09 20:09:56 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4aa3cfda7a6007867eba922a1b549471cbced425

tdf#120715: handle LOK case

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.