tdf#120715: handle LOK case

Commit 690d4eb71509649ad147cfe60f5b97e2cfaaa519 fixed the two problems
of wrong paragraph mark position and wrong cursor position, calling
AddExtraBlankWidth from SwTextPainter::DrawTextLine. Since this function
is called before calculating cursor position in desktop case, this fixed
them both: SwCursorShell::EndAction calls SwViewShell::EndAction before
UpdateCursor; the former calls ImplEndAction, and in it, PaintSwFrame is
called when not in LOK mode.

But in LOK mode, PaintSwFrame is not called until SwViewShell::PaintTile
runs in a later request; thus, UpdateCursor operated on unadjusted data.
The cursor position arrived wrong, but the paragraph mark was painted OK
when tiles were rendered.

To avoid dependency on the call order, also call AddExtraBlankWidth from
SwTextCursor::GetCharRect, which is called inside UpdateCursor.

Change-Id: I0984d7c6235a7f2573f9fa8b7ed0cefee5747658
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155531
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>